Adding required logic for to get refresh token